Add APIs for deletion of accounts, categories and expenses. Fix bugs with category tree. Update API doc. Update Postman collection.
