# files/api.yml
@@ -72,8 +72,38 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Account'          
-
+                  $ref: '#/components/schemas/Account'
+                  
+  /api/accounts/{accountId}:
+    parameters:
+      - name: accountId
+        in: path
+        description: ID of account for which we want to create category
+        required: true
+        schema:
+          type: integer
+          format: int64
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Accounts
+      summary: Delete account
+      operationId: deleteAccount
+      parameters:
+        - name: force
+          in: query
+          description: If param is present and its value is not 0 all categories and expenses in all categories will be deleted. Otherwise if account is not empty an error will be returned
+          schema:
+            type: integer
+            format: int64
+            example: 1
+      responses:
+        '204':
+          description: Successful operation
+        '404':
+          description: Not found     
+          
   /api/accounts/{accountId}/categories:
     parameters:
       - name: accountId
@@ -163,6 +193,26 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CategoryTree'       
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Categories
+      summary: Delete category
+      operationId: deleteCategory
+      parameters:
+        - name: force
+          in: query
+          description: If param is present and its value is not 0 all subcategories and expenses in category and its subcategories will be deleted. Otherwise if category is not empty an error will be returned
+          schema:
+            type: integer
+            format: int64
+            example: 1
+      responses:
+        '204':
+          description: Successful operation
+        '404':
+          description: Not found      
                   
   /api/accounts/{accountId}/expenses:
     parameters:
@@ -232,7 +282,34 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Expense'    
-                  
+  /api/accounts/{accountId}/expenses/{expenseId}:
+    parameters:
+      - name: accountId
+        in: path
+        description: ID of account for which we want to create expense
+        required: true
+        schema:
+          type: integer
+          format: int64  
+      - name: expenseId
+        in: path
+        description: ID of the expense to be deleted
+        required: true
+        schema:
+          type: integer
+          format: int64
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Expenses
+      summary: Delete expense
+      operationId: deleteExpense
+      responses:
+        '204':
+          description: Successful operation
+        '404':
+          description: Not found
   /api/accounts/{accountId}/categories/{categoryId}/image:
     post:
       tags:
